[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/scripts/UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/UI/optionsPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/gra/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/gra/font/OpenDyslexic3-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.478431, 0.466667, 0.45098, 1 )

[sub_resource type="DynamicFont" id=2]
size = 43
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/CenterContainer"]
margin_left = 664.0
margin_top = 226.0
margin_right = 1256.0
margin_bottom = 312.0
theme = SubResource( 3 )
text = "Gamepad Recommended"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer"]
margin_top = 542.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Continue" type="Button" parent="PanelContainer/VBoxContainer/Control/VBoxContainer"]
visible = false
margin_right = 300.0
margin_bottom = 20.0
size_flags_vertical = 3
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_NewGame" type="Button" parent="PanelContainer/VBoxContainer/Control/VBoxContainer"]
margin_right = 300.0
margin_bottom = 64.0
size_flags_vertical = 3
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_LevelSelect" type="Button" parent="PanelContainer/VBoxContainer/Control/VBoxContainer"]
visible = false
margin_top = 51.0
margin_right = 300.0
margin_bottom = 98.0
size_flags_vertical = 3
text = "Select Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Options" type="Button" parent="PanelContainer/VBoxContainer/Control/VBoxContainer"]
margin_top = 68.0
margin_right = 300.0
margin_bottom = 132.0
size_flags_vertical = 3
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Quit" type="Button" parent="PanelContainer/VBoxContainer/Control/VBoxContainer"]
margin_top = 136.0
margin_right = 300.0
margin_bottom = 200.0
size_flags_vertical = 3
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 862.76
margin_top = 605.445
margin_right = 1062.76
margin_bottom = 675.445
dialog_text = "Quit to  Desktop?"

[node name="optionsPanel" parent="." instance=ExtResource( 2 )]

[node name="CharacterSelect" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -400.0
margin_right = 300.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSelect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_1" type="Button" parent="CharacterSelect/VBoxContainer"]
margin_top = 121.0
margin_right = 400.0
margin_bottom = 159.0
focus_neighbour_top = NodePath("../../character_select_close")
focus_neighbour_bottom = NodePath("../player_2")
focus_next = NodePath("../player_2")
focus_previous = NodePath(".")
size_flags_vertical = 6
action_mode = 0
text = "Character 1"

[node name="player_2" type="Button" parent="CharacterSelect/VBoxContainer"]
margin_top = 441.0
margin_right = 400.0
margin_bottom = 479.0
focus_neighbour_top = NodePath("../player_1")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath("../player_1")
focus_previous = NodePath("../player_1")
size_flags_vertical = 6
action_mode = 0
text = "Character 2"

[node name="character_select_close" type="Button" parent="CharacterSelect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -26.0
margin_bottom = 38.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="options_opened" from="." to="optionsPanel" method="_on_MainMenu_options_opened"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="panel_closed" from="optionsPanel" to="." method="_on_optionsPanel_panel_closed"]
[connection signal="pressed" from="CharacterSelect/character_select_close" to="." method="_on_character_select_close_pressed"]
